--- a/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.css
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.css
@@ -1,2 +1,24 @@
-﻿body {
+.form-sign {
+  width: 100%;
+  max-width: 420px;
+  padding: 15px;
+  margin: auto;
+}
+
+  .form-sign input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  .form-sign .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+  }
+
+.login {
+  color: #666;
 }
