--- a/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -1,15 +1,16 @@
 <div class="text-center">
-  <form class="">
-    <h1 class="h4">Login do Cliente</h1>
+  <form class="form-sign">
+
+    <h1 class="h4 mb-2 login">Login do Cliente</h1>
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail"
            name="email" placeholder="Informe seu Email"
-           class="form-control"/>
+           class="form-control  mb-2"/>
 
     <label for="inputSenha" class="sr-only">Senha</label>
     <input type="password" id="inputSenha"
            name="senha" placeholder="Senha"
-           class="form-control"/>
+           class="form-control  mb-2"/>
 
     <button class="btn btn-primary" type="submit">Entrar</button>
 
