--- a/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -5,16 +5,50 @@
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail"
            name="email" placeholder="Informe seu Email"
-           class="form-control  mb-2"/>
+           class="form-control mb-2"
+           [(ngModel)]="usuario.email"
+           #email="ngModel"
+           [ngClass]="{
+            'is-invalid': email.invalid && (email.dirty || email.touched),
+            'is-valid': email.valid && (email.dirty || email.touched)
+           }"
+           email
+           required />
+
+    <div class="invalid-feedback mb-2" *ngIf="email.invalid && (email.dirty || email.touched)">
+      <div *ngIf="email.errors.required">
+        Email é de preenchimento obrigatório
+      </div>
+      <div *ngIf="email.errors.email">
+        Email não está no formato correto
+      </div>
+    </div>
 
     <label for="inputSenha" class="sr-only">Senha</label>
     <input type="password" id="inputSenha"
            name="senha" placeholder="Senha"
-           class="form-control  mb-2"/>
+           class="form-control mb-2"
+           [(ngModel)]="usuario.senha"
+           #senha="ngModel"
+           [ngClass]="{
+            'is-invalid': senha.invalid && (senha.dirty || senha.touched),
+            'is-valid': senha.valid && (senha.dirty || senha.touched)
+           }"
+           required />
 
-    <button class="btn btn-primary" type="submit">Entrar</button>
+    <div class="invalid-feedback mb-2" *ngIf="senha.invalid && (senha.dirty || senha.touched)">
+      <div *ngIf="senha.errors.required">
+        A senha é de preenchimento obrigatório.
+      </div>
+    </div>
 
+    <button class="btn btn-primary form-control" type="submit" (click)="entrar()">Entrar</button>
+
+    <img src="../../../assets/img/quick-b-logo.jpg" />
+
+    <div class="alert alert-primary" role="alert" *ngIf="usuarioAutenticado">
+      Usuario autenticado
+    </div>
 
   </form>
-
 </div>
