--- a/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -42,7 +42,14 @@
       </div>
     </div>
 
-    <button class="btn btn-primary form-control" type="submit" (click)="entrar()">Entrar</button>
+    <button class="btn btn-primary form-control" type="submit" (click)="entrar()" [disabled]="ativarSpinner">
+      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativarSpinner"></span>
+      Entrar  
+    </button>
+
+    <div class="alert alert-danger" *ngIf="mensagem">
+      {{mensagem}}
+    </div>
 
     <img src="../../../assets/img/quick-b-logo.jpg" />
 
