--- a/QuickBuy.Web/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
@@ -1,10 +1,44 @@
 <div class="text-center">
   <form class="form-sign">
 
-    <h1 class="h4 mb-2 login">Login do Cliente</h1>
+    <h1 class="h4 mb-2 login">Cadastro do Cliente</h1>
+    <label for="inputNome" class="sr-only">Nome</label>
+    <input type="text" id="inputNome"
+           name="nome" placeholder="Nome"
+           class="form-control mb-2"
+           [(ngModel)]="usuario.nome"
+           #nome="ngModel"
+           [ngClass]="{
+            'is-invalid': nome.invalid && (nome.dirty || nome.touched),
+            'is-valid': nome.valid && (nome.dirty || nome.touched)
+           }"
+           required />
+    <div class="invalid-feedback mb-2" *ngIf="nome.invalid && (nome.dirty || nome.touched)">
+      <div *ngIf="nome.errors.required">
+        O nome é de preenchimento obrigatório.
+      </div>
+    </div>
+
+    <label for="inputSobrenome" class="sr-only">Sobrenome</label>
+    <input type="text" id="inputSobrenome"
+           name="sobrenome" placeholder="Sobrenome"
+           class="form-control mb-2"
+           [(ngModel)]="usuario.sobrenome"
+           #sobrenome="ngModel"
+           [ngClass]="{
+            'is-invalid': sobrenome.invalid && (sobrenome.dirty || sobrenome.touched),
+            'is-valid': sobrenome.valid && (sobrenome.dirty || sobrenome.touched)
+           }"
+           required />
+    <div class="invalid-feedback mb-2" *ngIf="sobrenome.invalid && (sobrenome.dirty || sobrenome.touched)">
+      <div *ngIf="sobrenome.errors.required">
+        O sobrenome é de preenchimento obrigatório.
+      </div>
+    </div>
+
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail"
-           name="email" placeholder="Informe seu Email"
+           name="email" placeholder="Email"
            class="form-control mb-2"
            [(ngModel)]="usuario.email"
            #email="ngModel"
@@ -42,11 +76,11 @@
       </div>
     </div>
 
-    <button class="btn btn-primary form-control" type="submit" (click)="entrar()" [disabled]="ativarSpinner">
+    <button class="btn btn-primary form-control" type="submit" (click)="cadastrar()" [disabled]="ativarSpinner">
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativarSpinner"></span>
-      Entrar  
+      Cadastrar
     </button>
-    <div>Novo por aqui? <a [routerLink]='["/novo-usuario"]'>Cadastre-se</a></div>
+    <div><a [routerLink]='["/entrar"]'>Voltar</a></div>
 
     <div class="alert alert-danger" *ngIf="mensagem">
       {{mensagem}}
