--- a/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
@@ -1,57 +1,63 @@
 <div class="text-center">
   <h1 class="h4 titulo">Cadastro de Produto</h1>
   <form class="form-sign">
-    <label for="inputNome" class="sr-only">Nome do produto</label>
-    <input type="text" id="inputNome" name="nomeProduto" placeholder="Nome do Produto"
-           class="form-control mb-2 col-md-6"
+    <h1 class="h4 titulo">Cadastro de Produto</h1>
+    <label for="inputNome" class="sr-only">Nome</label>
+    <input type="text" id="inputNome"
+           name="nomeProduto"
+           placeholder="Nome do produto"
+           class="form-control mb-2 col-md-4"
+           [ngClass]=""
            [(ngModel)]="produto.nome"
            #nome="ngModel"
-           [ngClass]="{
-            'is-invalid': nome.invalid && (nome.dirty || nome.touched),
-            'is-valid': nome.valid && (nome.dirty || nome.touched)
-           }"
            required />
-    <div class="invalid-feedback mb-2" *ngIf="nome.invalid && (nome.dirty || nome.touched)">
+    <div class="invalid-feedback mb-2" *ngIf="nome.invalid && (nome.dirty || nome.touched) ">
       <div *ngIf="nome.errors.required">
-        O nome é de preenchimento obrigatório.
+        Nome do produto é de preenchimento obrigatório
       </div>
     </div>
 
-    <label for="inputDescricao" class="sr-only">Descrição do produto</label>
-    <input type="text" id="inputDescricao" name="descricaoProduto" placeholder="Descrição do produto"
-           class="form-control mb-2 col-md-6"
+    <label for="inputDescricao" class="sr-only">Descrição</label>
+    <input type="text" id="inputDescricao"
+           name="descricaoProduto"
+           placeholder="Descrição do produto"
+           class="form-control mb-2 col-md-4"
+           [ngClass]=""
            [(ngModel)]="produto.descricao"
            #descricao="ngModel"
-           [ngClass]="{
-            'is-invalid': descricao.invalid && (descricao.dirty || descricao.touched),
-            'is-valid': descricao.valid && (descricao.dirty || descricao.touched)
-           }"
            required />
-    <div class="invalid-feedback mb-2" *ngIf="nome.invalid && (nome.dirty || nome.touched)">
-      <div *ngIf="nome.errors.required">
-        A descrição é de preenchimento obrigatória.
+    <div class="invalid-feedback mb-2" *ngIf="descricao.invalid && (descricao.dirty || descricao.touched) ">
+      <div *ngIf="descricao.errors.required">
+        Descrição do produto é de preenchimento obrigatório
       </div>
     </div>
 
     <label for="inputPreco" class="sr-only">Preço</label>
-    <input type="number" id="inputPreco" name="precoProduto" placeholder="Preço"
-           class="form-control mb-2 col-md-4"
+    <input type="number"
+           id="inputPreco"
+           name="precoProduto"
+           placeholder="Preço"
+           class="form-control mb-2 col-md-2"
+           [ngClass]=""
            [(ngModel)]="produto.preco"
            #preco="ngModel"
-           [ngClass]="" />
+           required />
 
-    <div class="invalid-feedback mb-2" *ngIf="preco.invalid && (preco.dirty || preco.touched)">
+    <div class="invalid-feedback mb-2" *ngIf="preco.invalid && (preco.dirty || preco.touched) ">
       <div *ngIf="preco.errors.required">
-        o preço é de preenchimento obrigatório.
+        Preço do produto é de preenchimento obrigatório
       </div>
     </div>
 
-    <div class="input-group">
-      <!--<label for="inputFile" class="sr-only">Escolha um arquivo</label>-->
-      <div class="custom-file col-md-6">
-        <input type="file" class="custom-file-input" id="inputFile" placeholder="Escolha uma foto para o produto"/>
-        <label for="inputArquivo" class="custom-file-label">Escolha uma foto para o produto</label>
+    <div class="input-group mb-2">
+      <div class="custom-file col-md-4">
+        <input type="file" class="custom-file-input" id="inputFile" (change)="inputChange($event.target.files)" />
+        <label for="inputFile" class="custom-file-label">Escolha uma foto</label>
       </div>
     </div>
+    <button class="btn btn-primary" (click)="cadastrar()" [disabled]="ativar_spinner">
+      <span class="spinner-border spinner-border-sm" *ngIf="ativar_spinner"></span>
+      Cadastrar
+    </button>
   </form>
 </div>
