--- a/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
@@ -1,5 +1,4 @@
-<div class="text-center">
-  <h1 class="h4 titulo">Cadastro de Produto</h1>
+<div class="">
   <form class="form-sign">
     <h1 class="h4 titulo">Cadastro de Produto</h1>
     <label for="inputNome" class="sr-only">Nome</label>
@@ -7,7 +6,10 @@
            name="nomeProduto"
            placeholder="Nome do produto"
            class="form-control mb-2 col-md-4"
-           [ngClass]=""
+           [ngClass]="{
+            'is-invalid': nome.invalid && (nome.dirty || nome.touched),
+            'is-valid': nome.valid && (nome.dirty || nome.touched)
+           }"
            [(ngModel)]="produto.nome"
            #nome="ngModel"
            required />
@@ -22,7 +24,10 @@
            name="descricaoProduto"
            placeholder="Descrição do produto"
            class="form-control mb-2 col-md-4"
-           [ngClass]=""
+           [ngClass]="{
+            'is-invalid': descricao.invalid && (descricao.dirty || descricao.touched),
+            'is-valid': descricao.valid && (descricao.dirty || descricao.touched)
+           }"
            [(ngModel)]="produto.descricao"
            #descricao="ngModel"
            required />
@@ -38,7 +43,10 @@
            name="precoProduto"
            placeholder="Preço"
            class="form-control mb-2 col-md-2"
-           [ngClass]=""
+           [ngClass]="{
+            'is-invalid': preco.invalid && (preco.dirty || preco.touched),
+            'is-valid': preco.valid && (preco.dirty || preco.touched)
+           }"
            [(ngModel)]="produto.preco"
            #preco="ngModel"
            required />
@@ -52,12 +60,18 @@
     <div class="input-group mb-2">
       <div class="custom-file col-md-4">
         <input type="file" class="custom-file-input" id="inputFile" (change)="inputChange($event.target.files)" />
-        <label for="inputFile" class="custom-file-label">Escolha uma foto</label>
+        <label for="inputFile" class="custom-file-label">{{nomeArquivoSelecionado}}</label>
       </div>
     </div>
-    <button class="btn btn-primary" (click)="cadastrar()" [disabled]="ativar_spinner">
+    <button class="btn btn-primary mb-2" (click)="cadastrar()" [disabled]="ativar_spinner">
       <span class="spinner-border spinner-border-sm" *ngIf="ativar_spinner"></span>
       Cadastrar
     </button>
   </form>
+  <div class="alert alert-danger col-md-4" *ngIf="mensagem">
+    {{mensagem}}
+  </div>
+  <div class="alert alert-success col-md-4" *ngIf="produto.id">
+    {{produto.nome}} cadastrado com sucesso.
+  </div>
 </div>
